# darkroom-rs

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yaml
benchmark/: README.md  darkroom-go.Dockerfile  docker-compose.yml  prometheus.yml
src/: error.rs  main.rs  prelude.rs
src/app/: mod.rs  router.rs  server.rs
src/config/: config.rs  mod.rs  url.rs
src/config/values/: default.yaml
src/handler/: deps.rs  image.rs  mod.rs  response.rs
src/handler/query/: auto.rs  crop.rs  fit.rs  flip.rs  mod.rs  monochrome.rs  params.rs  rotate.rs  vec.rs
src/processor/: chain.rs  error.rs  image.rs  mod.rs
src/processor/chainer/: chain.rs  mod.rs
src/processor/gpuprocs/: backend.rs  blur.rs  error.rs  mod.rs  utils.rs
src/processor/gpuprocs/shaders/: gaussian_blur.wgsl
src/processor/procs/: blur.rs  crop.rs  flip.rs  mod.rs  monochrome.rs  resize.rs  rotate.rs
src/storage/: errors.rs  getter.rs  mod.rs  types.rs
src/storage/webfolder/: getter.rs  mod.rs
